# demo-repo2

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
src/dicom_diffusion/: __init__.py  __main__.py  bloch_mcconnell.py  diffusion.py  io.py
tests/: test_bloch_mcconnell.py  test_diffusion.py
