[project]
name = "dicom-diffusion"
version = "0.1.0"
description = "Process DICOM images and simulate diffusion and Bloch-McConnell dynamics"
readme = "README.md"
authors = [{name = "Demo User"}]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydicom",
  "scipy"
]

[project.urls]
Homepage = "https://example.com"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
