[metadata]
name = dicom-diffusion
version = 0.1.0
description = Process DICOM images and simulate diffusion and Bloch-McConnell dynamics
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pydicom
    scipy
python_requires = >=3.10

[options.packages.find]
where = src
